--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  overflow: hidden;
+  max-height: 100dvh;
+  max-width: 100dvw;
+  margin: 0;
+}
